tests/samples/invalid/member_of_int.pn
fn foo() -> i32
{
	var result: i32 = 400;
	var x = result.foo;
	return: result
}
